[package]
name = "lms"
version = "0.1.0"
authors = ["Maurice Hieronymus <maurice_hieronymus@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { version = "0.9.5", default-features = false }
arrayvec = { version = "0.7.1", default-features = false }
rand = { version = "0.8.3", optional = true }


[dev-dependencies]
clap = "2.33.3"
tempfile = "3.2.0"
hex = "0.4.3"

[features]
default = ["std"]
std = ["rand"]
