[package]
name = "hbs-lms"
version = "0.1.0-alpha.5"
authors = ["Fraunhofer AISEC"]
description = """
Pure Rust implementation of the Leighton Micali Signature scheme with support for key generation, signature generation and verification.
"""
edition = "2018"
repository = "https://github.com/Fraunhofer-AISEC/hbs-lms-rust"
license = "Apache-2.0"
readme = "README.md"
keywords = ["crypto", "post-quantum", "signature", "lms"]
categories = ["cryptography", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }
crossbeam = {version = "0.8", optional = true }
signature = { version = "1.4.0", default-features = false}
sha2 = { version = "0.9.5", default-features = false }
sha3 = { version = "0.9.1", default-features = false }
rand = { version = "0.8.3", optional = true }


[dev-dependencies]
clap = "2.33.3"
tempfile = "3.2.0"
hex = "0.4.3"

[features]
default = ["std", "crossbeam"]
std = ["rand"]
fast_verify = []
