[package]
name = "hbs-lms"
version = "0.1.0-alpha.5"
rust-version = "1.57"
authors = ["Fraunhofer AISEC"]
description = """
Pure Rust implementation of the Leighton Micali Signature scheme with support for key generation, signature generation and verification.
"""
edition = "2018"
repository = "https://github.com/Fraunhofer-AISEC/hbs-lms-rust"
license = "Apache-2.0"
readme = "README.md"
keywords = ["crypto", "post-quantum", "signature", "lms"]
categories = ["cryptography", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec = { version = "1.5.1", features = ["rustc_1_55"] }
signature = { version = "1.4.0", default-features = false}
sha2 = { version = "0.10.0", default-features = false }
sha3 = { version = "0.10.0", default-features = false }
crossbeam = {version = "0.8", optional = true }
rand = { version = "0.8.3", optional = true }


[dev-dependencies]
clap = "3.0.0"
tempfile = "3.2.0"
hex = "0.4.3"
rand = "0.8.3"

[features]
default = ["std"]
std = []
fast_verify = ["std", "rand", "crossbeam"]
verbose = []
