[package]
name = "hbs-lms"
version = "0.1.1"
rust-version = "1.57"
authors = ["Fraunhofer AISEC"]
description = """
Pure Rust implementation of the Leighton Micali Signature scheme with support for key generation, signature generation and verification.
"""
edition = "2018"
repository = "https://github.com/Fraunhofer-AISEC/hbs-lms-rust"
license = "Apache-2.0"
readme = "README.md"
keywords = ["crypto", "post-quantum", "signature", "lms"]
categories = ["cryptography", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec = { version = "1.5.1", features = ["rustc_1_55"] }
subtle = { version = "2.4.1", default-features = false }
zeroize = { version = "1.5.1", default-features = false, features = ["zeroize_derive"] }
signature = { version = "1.4.0", default-features = false }
digest = { version = "0.10.2", default-features = false }
sha2 = { version = "0.10.0", default-features = false }
sha3 = { version = "0.10.0", default-features = false }
crossbeam = {version = "0.8", optional = true }
rand = { version = "0.8.3", optional = true }
# from Ferrous Systems exercises to support Nordicsemi
cortex-m = {version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
dk = { path = "./rust-exercises/nrf52-code/boards/dk", features = ["radio"] }
heapless = "0.8"
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3.5"
defmt-rtt = "0.4"



[dev-dependencies]
#clap = "3.0.0"
#tempfile = "3.2.0"
#hex = "0.4.3"
#rand = "0.8.3"
rand = { version = "0.8.3", default-features = false }

[features]
default = []
std = []
fast_verify = ["std", "rand", "crossbeam"]
verbose = []

# from Ferrous Systems exercises to support Nordicsemi
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # !
incremental = false
lto = "fat"
opt-level = 0 # 0 -> no optim.; "z" -> optim. for size
overflow-checks = false
# from Ferrous Systems exercises to support Nordicsemi
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
